--- a/WebDev/EcommerceWebsite/css/style.css
+++ b/WebDev/EcommerceWebsite/css/style.css
@@ -45,7 +45,20 @@ body {
     background-color: #FFFFFF !important;
     background-size: cover !important;
 }
-
+.bodybg2{
+    content: '' !important;
+    display: block !important;
+    background-attachment: scroll !important;
+    height: 100% !important;
+    left: 0 !important;
+    position: fixed !important;
+    top: 0 !important;
+    width: 100vw !important;
+    z-index: -1000 !important;
+    background-image: url(../images/bikebg.png) !important;
+    background-color: #FFFFFF !important;
+    background-size: cover !important;
+}
 a {
     color: #1f1f1f;
     text-decoration: none !important;
